{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 176,
  "lineage": "3bb68cc6-5bbd-59a5-927c-f180abf58a4b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0368c94a4eac38499",
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:elastic-ip/eipalloc-0368c94a4eac38499",
            "domain": "vpc",
            "id": "eipalloc-0368c94a4eac38499",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-78-75-190.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.75.190",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "analytics-ngw-eip"
            },
            "tags_all": {
              "Name": "analytics-ngw-eip",
              "Project": "wsc2026-analytics"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bb4ddfc0e51bb5e",
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:instance/i-0e43423c6f562e6e6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "wsc2026-alaytics-ec2-role",
            "id": "i-0e43423c6f562e6e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-071fc50e56a22cbad",
            "private_dns": "ip-10-20-100-17.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.100.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:412869002243:key/6559ef02-2bc2-4bc8-ab3e-1c23b1ed2ba4",
                "tags_all": {
                  "Project": "wsc2026-analytics"
                },
                "throughput": 125,
                "volume_id": "vol-05a36fc1d260819ee",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aaf9e8a331698f81",
            "tags": {
              "Name": "wsc2026-analytics-ec2"
            },
            "tags_all": {
              "Name": "wsc2026-analytics-ec2",
              "Project": "wsc2026-analytics"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-036e1dff4fb918740"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ngw",
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_iam_role_policy.ec2",
            "aws_iam_role_policy_attachment.ec2_ssm",
            "aws_internet_gateway.igw",
            "aws_kinesis_stream.orders",
            "aws_nat_gateway.ngw",
            "aws_route.priv_default",
            "aws_route_table.priv",
            "aws_security_group.ec2",
            "aws_subnet.this",
            "aws_vpc.main",
            "data.aws_iam_policy_document.ec2_assume",
            "data.aws_iam_policy_document.ec2_policy",
            "data.aws_ssm_parameter.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:internet-gateway/igw-0ade42bc077bf574c",
            "id": "igw-0ade42bc077bf574c",
            "owner_id": "412869002243",
            "tags": {
              "Name": "analytics-igw"
            },
            "tags_all": {
              "Name": "analytics-igw",
              "Project": "wsc2026-analytics"
            },
            "vpc_id": "vpc-0a0718c4226467a2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:412869002243:loadbalancer/app/wsc2026-analytics-alb/6de3b9202b04d1bb",
            "arn_suffix": "app/wsc2026-analytics-alb/6de3b9202b04d1bb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wsc2026-analytics-alb-2010393828.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:412869002243:loadbalancer/app/wsc2026-analytics-alb/6de3b9202b04d1bb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wsc2026-analytics-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-067b21607644b0270"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d7c362b44ad0d1ec"
              },
              {
                "subnet_id": "subnet-0e07771e2c3904419"
              }
            ],
            "subnets": [
              "subnet-0d7c362b44ad0d1ec",
              "subnet-0e07771e2c3904419"
            ],
            "tags": {
              "Name": "wsc2026-analytics-alb"
            },
            "tags_all": {
              "Name": "wsc2026-analytics-alb",
              "Project": "wsc2026-analytics"
            },
            "vpc_id": "vpc-0a0718c4226467a2f",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:412869002243:listener/app/wsc2026-analytics-alb/6de3b9202b04d1bb/2051ba5ad612df50",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:412869002243:targetgroup/wsc2026-analytics-tg/6abb3121ca14c479",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:412869002243:listener/app/wsc2026-analytics-alb/6de3b9202b04d1bb/2051ba5ad612df50",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:412869002243:loadbalancer/app/wsc2026-analytics-alb/6de3b9202b04d1bb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-analytics"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:412869002243:targetgroup/wsc2026-analytics-tg/6abb3121ca14c479",
            "arn_suffix": "targetgroup/wsc2026-analytics-tg/6abb3121ca14c479",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:412869002243:targetgroup/wsc2026-analytics-tg/6abb3121ca14c479",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wsc2026-analytics-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "wsc2026-analytics-tg"
            },
            "tags_all": {
              "Name": "wsc2026-analytics-tg",
              "Project": "wsc2026-analytics"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a0718c4226467a2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:412869002243:targetgroup/wsc2026-analytics-tg/6abb3121ca14c479-20260731014124474000000008",
            "port": 5000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:412869002243:targetgroup/wsc2026-analytics-tg/6abb3121ca14c479",
            "target_id": "i-0e43423c6f562e6e6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ngw",
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_iam_role_policy.ec2",
            "aws_iam_role_policy_attachment.ec2_ssm",
            "aws_instance.app",
            "aws_internet_gateway.igw",
            "aws_kinesis_stream.orders",
            "aws_lb_target_group.tg",
            "aws_nat_gateway.ngw",
            "aws_route.priv_default",
            "aws_route_table.priv",
            "aws_security_group.ec2",
            "aws_subnet.this",
            "aws_vpc.main",
            "data.aws_iam_policy_document.ec2_assume",
            "data.aws_iam_policy_document.ec2_policy",
            "data.aws_ssm_parameter.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0368c94a4eac38499",
            "association_id": "eipassoc-0f116681cd3fa590e",
            "connectivity_type": "public",
            "id": "nat-0e993e09426a7c03d",
            "network_interface_id": "eni-0d47a3b48de53dc48",
            "private_ip": "10.20.0.125",
            "public_ip": "52.78.75.190",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d7c362b44ad0d1ec",
            "tags": {
              "Name": "analytics-ngw"
            },
            "tags_all": {
              "Name": "analytics-ngw",
              "Project": "wsc2026-analytics"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ngw",
            "aws_internet_gateway.igw",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "priv_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "analytics-priv-a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b761d1c57dec51f61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e993e09426a7c03d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b761d1c57dec51f6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ngw",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.priv",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "analytics-priv-b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ee1761e4a5262f481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e993e09426a7c03d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee1761e4a5262f48",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.ngw",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.priv",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ade42bc077bf574c",
            "id": "r-rtb-0e73765ca97358c6e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e73765ca97358c6e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "analytics-priv-a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:route-table/rtb-0b761d1c57dec51f6",
            "id": "rtb-0b761d1c57dec51f6",
            "owner_id": "412869002243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "analytics-priv-a-rtb"
            },
            "tags_all": {
              "Name": "analytics-priv-a-rtb",
              "Project": "wsc2026-analytics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0718c4226467a2f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "analytics-priv-b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:route-table/rtb-0ee1761e4a5262f48",
            "id": "rtb-0ee1761e4a5262f48",
            "owner_id": "412869002243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "analytics-priv-b-rtb"
            },
            "tags_all": {
              "Name": "analytics-priv-b-rtb",
              "Project": "wsc2026-analytics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0718c4226467a2f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:route-table/rtb-0e73765ca97358c6e",
            "id": "rtb-0e73765ca97358c6e",
            "owner_id": "412869002243",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "analytics-pub-rtb"
            },
            "tags_all": {
              "Name": "analytics-pub-rtb",
              "Project": "wsc2026-analytics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0718c4226467a2f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "analytics-priv-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7a6ee8a72db6252",
            "route_table_id": "rtb-0b761d1c57dec51f6",
            "subnet_id": "subnet-0aaf9e8a331698f81"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.priv",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "analytics-priv-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3bf2ede3f3883fb",
            "route_table_id": "rtb-0ee1761e4a5262f48",
            "subnet_id": "subnet-0ea02911c5fb1b385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.priv",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "analytics-pub-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7da87cc1cdb75bf",
            "route_table_id": "rtb-0e73765ca97358c6e",
            "subnet_id": "subnet-0d7c362b44ad0d1ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pub",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "analytics-pub-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019e318cda9aa81ba",
            "route_table_id": "rtb-0e73765ca97358c6e",
            "subnet_id": "subnet-0e07771e2c3904419"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pub",
            "aws_subnet.this",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:security-group/sg-067b21607644b0270",
            "description": "ALB inbound HTTP 80",
            "egress": [],
            "id": "sg-067b21607644b0270",
            "ingress": [],
            "name": "wsc2026-analytics-alb-sg",
            "name_prefix": "",
            "owner_id": "412869002243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wsc2026-analytics-alb-sg"
            },
            "tags_all": {
              "Name": "wsc2026-analytics-alb-sg",
              "Project": "wsc2026-analytics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0718c4226467a2f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:security-group/sg-036e1dff4fb918740",
            "description": "App instance - only from ALB",
            "egress": [],
            "id": "sg-036e1dff4fb918740",
            "ingress": [],
            "name": "wsc2026-analytics-ec2-sg",
            "name_prefix": "",
            "owner_id": "412869002243",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wsc2026-analytics-ec2-sg"
            },
            "tags_all": {
              "Name": "wsc2026-analytics-ec2-sg",
              "Project": "wsc2026-analytics"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0718c4226467a2f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "analytics-priv-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:subnet/subnet-0aaf9e8a331698f81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.20.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaf9e8a331698f81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "analytics-priv-a"
            },
            "tags_all": {
              "Name": "analytics-priv-a",
              "Project": "wsc2026-analytics"
            },
            "vpc_id": "vpc-0a0718c4226467a2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "analytics-priv-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:subnet/subnet-0ea02911c5fb1b385",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.20.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea02911c5fb1b385",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "analytics-priv-b"
            },
            "tags_all": {
              "Name": "analytics-priv-b",
              "Project": "wsc2026-analytics"
            },
            "vpc_id": "vpc-0a0718c4226467a2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "analytics-pub-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:subnet/subnet-0d7c362b44ad0d1ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7c362b44ad0d1ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "analytics-pub-a"
            },
            "tags_all": {
              "Name": "analytics-pub-a",
              "Project": "wsc2026-analytics"
            },
            "vpc_id": "vpc-0a0718c4226467a2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "analytics-pub-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:subnet/subnet-0e07771e2c3904419",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e07771e2c3904419",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "412869002243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "analytics-pub-b"
            },
            "tags_all": {
              "Name": "analytics-pub-b",
              "Project": "wsc2026-analytics"
            },
            "vpc_id": "vpc-0a0718c4226467a2f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:vpc/vpc-0a0718c4226467a2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0ba5d994c6ee6b226",
            "default_route_table_id": "rtb-07ca87ff297da5af2",
            "default_security_group_id": "sg-0488c7db8e9864888",
            "dhcp_options_id": "dopt-066d3051f04ba7569",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0718c4226467a2f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ca87ff297da5af2",
            "owner_id": "412869002243",
            "tags": {
              "Name": "analytics-vpc"
            },
            "tags_all": {
              "Name": "analytics-vpc",
              "Project": "wsc2026-analytics"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_to_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:security-group-rule/sgr-0372298c41507b6b9",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "to app port",
            "from_port": 5000,
            "id": "sgr-0372298c41507b6b9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-036e1dff4fb918740",
            "security_group_id": "sg-067b21607644b0270",
            "security_group_rule_id": "sgr-0372298c41507b6b9",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-analytics"
            },
            "to_port": 5000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:security-group-rule/sgr-06bef0dbf16eb4f8c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "outbound all",
            "from_port": null,
            "id": "sgr-06bef0dbf16eb4f8c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-036e1dff4fb918740",
            "security_group_rule_id": "sgr-06bef0dbf16eb4f8c",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-analytics"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:security-group-rule/sgr-049be62d37edd668a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from internet",
            "from_port": 80,
            "id": "sgr-049be62d37edd668a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067b21607644b0270",
            "security_group_rule_id": "sgr-049be62d37edd668a",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-analytics"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ec2_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:412869002243:security-group-rule/sgr-01abfabac4ca68139",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "app port from ALB only",
            "from_port": 5000,
            "id": "sgr-01abfabac4ca68139",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-067b21607644b0270",
            "security_group_id": "sg-036e1dff4fb918740",
            "security_group_rule_id": "sgr-01abfabac4ca68139",
            "tags": null,
            "tags_all": {
              "Project": "wsc2026-analytics"
            },
            "to_port": 5000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}